--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ background:brown ;
   margin:8px;
 
 
-header{border-bottom:  solid 2px;
+header{border-bottom:  solid 2px rgb(red, rgb(11, 214, 11), blue);
 margin: 20px;
 
 }
