--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@ body{
 color: white;
 background:brown ;
 }
-  margin:8px;
+  margin: 8px ;
 
 
-header{border-bottom:  solid 2px rgb(red, rgb(11, 214, 11), blue);
+header{border-bottom:  solid 2px rgb(11, 214, 11);
 margin: 20px;
 
 }
