--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,28 @@ background:brown ;
   margin: 8px ;
 
 
-header{border-bottom:  solid 2px rgb(11, 214, 11);
-margin: 20px;
+header{border-bottom:  solid 2px rgb(red, rgb(11, 214, 11), blue);
+poinddin: 20px;
+font-size: 34px;
+
+color: rgb,( 0,0 ,25);
+
+
+
+
+
+
+
+
 
 }
+
+
+
+
+
+
+
 
 
 
