--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,14 @@ body{
 color: white;
 background:brown ;
 }
-  margin: 8px ;
-
-
-header{border-bottom:  solid 2px rgb(red, rgb(11, 214, 11), blue);
-poinddin: 20px;
-font-size: 34px;
-
-color: rgb,( 0,0 ,25);
 
 
 
-
-
-
-
-
+header
+{border-bottom:  solid 2px rgb(42, 128, 222);
+padding: 20px;
+font: size 32px;
+color:black
 
 }
 
