--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ font: size 32px;
 color:black
 
 }
+section{
+background :rgb(184,156,213);
+padding-bottom:  80px;
+padding-top: 80px;
 
 
 
@@ -22,9 +26,6 @@ color:black
 
 
 
-
-
-
-
+}
 
 
