--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,13 @@ background :rgb(184,156,213);
 padding-bottom:  80px;
 padding-top: 80px;
 display: flex;
-
-
-
-
-
-
-
-
-
+justify-content :center;
 }
+.camada-texto{
+margin-right: 5%;
+}
+h1{font-size: 40px;
+
+
 
 
